--- a/Prototypes/1 kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic/ClientApp/src/custom.css
+++ b/Prototypes/1 kvp-web-fom.Prototype.Basic/kvp-web-fom.Prototype.Basic/ClientApp/src/custom.css
@@ -12,3 +12,9 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.feedback-form .card .card-content .content {
+    padding: 1.5rem;
+    margin-right: 0;
+    margin-left: 0;
+}
