--- a/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/Pages/_ViewImports.cshtml
+++ b/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using kvp_web_fom.Prototype.Retrive
-@namespace kvp_web_fom.Prototype.Retrive.Pages
+﻿@using kvp_web_fom.Prototype.Retrieve
+@namespace kvp_web_fom.Prototype.Retrieve.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
